{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 48,
  "lineage": "2b83905a-3951-3109-e285-25db2733b4e3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-063f9ccf5facc7d21",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980808829165:subnet/subnet-063f9ccf5facc7d21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063f9ccf5facc7d21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "980808829165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-099a13dbc423e5700"
          }
        },
        {
          "index_key": "subnet-0907c242196e43f14",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980808829165:subnet/subnet-0907c242196e43f14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0907c242196e43f14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "980808829165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-099a13dbc423e5700"
          }
        },
        {
          "index_key": "subnet-090b0320b9f8cd3d8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980808829165:subnet/subnet-090b0320b9f8cd3d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090b0320b9f8cd3d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "980808829165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-099a13dbc423e5700"
          }
        },
        {
          "index_key": "subnet-0b325a3a157bfff42",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980808829165:subnet/subnet-0b325a3a157bfff42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b325a3a157bfff42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "980808829165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-099a13dbc423e5700"
          }
        },
        {
          "index_key": "subnet-0ce5188ddee11adfe",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980808829165:subnet/subnet-0ce5188ddee11adfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce5188ddee11adfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "980808829165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-099a13dbc423e5700"
          }
        },
        {
          "index_key": "subnet-0eb7510f45442d602",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980808829165:subnet/subnet-0eb7510f45442d602",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb7510f45442d602",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "980808829165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-099a13dbc423e5700"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980808829165:vpc/vpc-099a13dbc423e5700",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0807ae5b77660fd35",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0523200d60c2bb011",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099a13dbc423e5700",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-057aabcec3c32a0f4",
            "owner_id": "980808829165"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:980808829165:loadbalancer/app/wp-final-alb/7834b39e8b86d1e3",
            "arn_suffix": "app/wp-final-alb/7834b39e8b86d1e3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wp-final-alb-1657988911.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:980808829165:loadbalancer/app/wp-final-alb/7834b39e8b86d1e3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wp-final-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0547e2f86c9fd0ff8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0907c242196e43f14"
              },
              {
                "subnet_id": "subnet-0b325a3a157bfff42"
              }
            ],
            "subnets": [
              "subnet-0907c242196e43f14",
              "subnet-0b325a3a157bfff42"
            ],
            "tags": {
              "Course": "cloud-computing-aws",
              "Name": "wp-final-alb",
              "Project": "final-wordpress-ha-s3"
            },
            "tags_all": {
              "Course": "cloud-computing-aws",
              "Name": "wp-final-alb",
              "Project": "final-wordpress-ha-s3"
            },
            "vpc_id": "vpc-099a13dbc423e5700",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnet.default_vpc",
            "data.aws_subnets.default_vpc",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:980808829165:listener/app/wp-final-alb/7834b39e8b86d1e3/e918b32c8c3e96b2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:980808829165:targetgroup/wp-final-tg/31fc3510a2a68010",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:980808829165:listener/app/wp-final-alb/7834b39e8b86d1e3/e918b32c8c3e96b2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:980808829165:loadbalancer/app/wp-final-alb/7834b39e8b86d1e3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.wordpress",
            "aws_lb_target_group.wordpress",
            "aws_security_group.alb",
            "data.aws_subnet.default_vpc",
            "data.aws_subnets.default_vpc",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:980808829165:targetgroup/wp-final-tg/31fc3510a2a68010",
            "arn_suffix": "targetgroup/wp-final-tg/31fc3510a2a68010",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:980808829165:targetgroup/wp-final-tg/31fc3510a2a68010",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:980808829165:loadbalancer/app/wp-final-alb/7834b39e8b86d1e3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wp-final-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Course": "cloud-computing-aws",
              "Name": "wp-final-tg",
              "Project": "final-wordpress-ha-s3"
            },
            "tags_all": {
              "Course": "cloud-computing-aws",
              "Name": "wp-final-tg",
              "Project": "final-wordpress-ha-s3"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-099a13dbc423e5700"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980808829165:security-group/sg-0547e2f86c9fd0ff8",
            "description": "Allow HTTP from the internet to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0547e2f86c9fd0ff8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp-final-alb-sg",
            "name_prefix": "",
            "owner_id": "980808829165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Course": "cloud-computing-aws",
              "Name": "wp-final-alb-sg",
              "Project": "final-wordpress-ha-s3"
            },
            "tags_all": {
              "Course": "cloud-computing-aws",
              "Name": "wp-final-alb-sg",
              "Project": "final-wordpress-ha-s3"
            },
            "timeouts": null,
            "vpc_id": "vpc-099a13dbc423e5700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980808829165:security-group/sg-04a8c592eafad89b8",
            "description": "Allow MySQL from WordPress EC2 SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a8c592eafad89b8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from WordPress EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0df92ea4c5d4e45d1"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wp-final-rds-sg",
            "name_prefix": "",
            "owner_id": "980808829165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Course": "cloud-computing-aws",
              "Name": "wp-final-rds-sg",
              "Project": "final-wordpress-ha-s3"
            },
            "tags_all": {
              "Course": "cloud-computing-aws",
              "Name": "wp-final-rds-sg",
              "Project": "final-wordpress-ha-s3"
            },
            "timeouts": null,
            "vpc_id": "vpc-099a13dbc423e5700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.wordpress",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:980808829165:security-group/sg-0df92ea4c5d4e45d1",
            "description": "Allow HTTP from ALB and optional SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df92ea4c5d4e45d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH for troubleshooting",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB only",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0547e2f86c9fd0ff8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp-final-wordpress-sg",
            "name_prefix": "",
            "owner_id": "980808829165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Course": "cloud-computing-aws",
              "Name": "wp-final-wordpress-sg",
              "Project": "final-wordpress-ha-s3"
            },
            "tags_all": {
              "Course": "cloud-computing-aws",
              "Name": "wp-final-wordpress-sg",
              "Project": "final-wordpress-ha-s3"
            },
            "timeouts": null,
            "vpc_id": "vpc-099a13dbc423e5700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}